<resources>
    <string name="app_name">RealEstateApp</string>
    <string name="search_homes">Search Homes</string>
    <string name="home_preferences">Home Preferences</string>
    <string name="ex_canyon">(Ex. Canyon)</string>
    <string name="ex_TX" />
    <string name="state_hint">Enter State Code (ex. TX)</string>
    <string name="state">Enter State Code (ex. TX)</string>
    <string name="price">Enter Maximum Price</string>
    <string name="bedrooms">Enter Number of Bedrooms</string>
    <string name="bathrooms">Enter Number of Bathrooms</string>
    <string name="all_fields_are_required_for_each_search">All fields are required for each search</string>
    <string name="search_listings">Search Listings</string>
    <string name="invalid_state">Please enter a 2 character state code</string>
    <string name="return_home">Return Home</string>
</resources>
