<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C0C0C0">

    <TextView
        android:id="@+id/textViewHome"
        android:layout_width="414dp"
        android:layout_height="88dp"
        android:layout_marginBottom="579dp"
        android:background="@color/color2"
        android:fontFamily="serif"
        android:text="@string/home_preferences"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textColorLink="@android:color/black"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/inputCity"
        android:layout_width="369dp"
        android:layout_height="69dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="438dp"
        android:autofillHints=""
        android:hint="@string/ex_canyon"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewHome"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/inputState"
        android:layout_width="369dp"
        android:layout_height="69dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="438dp"
        android:autofillHints=""
        android:hint="@string/state"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputCity"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/inputPrice"
        android:layout_width="369dp"
        android:layout_height="69dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="438dp"
        android:autofillHints=""
        android:hint="@string/price"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputState"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/inputBedrooms"
        android:layout_width="369dp"
        android:layout_height="69dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="438dp"
        android:autofillHints=""
        android:hint="@string/bedrooms"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputPrice"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/inputBathrooms"
        android:layout_width="369dp"
        android:layout_height="69dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="438dp"
        android:autofillHints=""
        android:hint="@string/bathrooms"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputBedrooms"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp"
        android:background="@color/color2"
        android:text="@string/search_listings"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="20"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewWarning"
        android:layout_width="330dp"
        android:layout_height="34dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="30dp"
        android:text="@string/all_fields_are_required_for_each_search"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/searchButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputBathrooms" />


</androidx.constraintlayout.widget.ConstraintLayout>